--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2"
   }
